# forgery

./: .gitignore  README.md  _quarto.yml  blog.qmd  custom.css  custom.scss  local.py  pyproject.toml
src/forgery/: __init__.py  constants.py  data.py  events.py  plot.py  tls.py  utils.py  vista.py
src/forgery/data/: Negro_Mag_Fault_vertices.csv  Opal_Mound_Fault_vertices.csv  forge_events.csv  top_granitoid_vertices.csv
src/forgery/data/FORGE_Extent/: FORGE_extent.dbf  FORGE_extent.sbn  FORGE_extent.shp  FORGE_extent.shp.xml  FORGE_extent.shx
src/forgery/data/Utah_FORGE_regional_wells/: Utah_FORGE_Regional_wells.dbf  Utah_FORGE_Regional_wells.sbn  Utah_FORGE_Regional_wells.sbx  Utah_FORGE_Regional_wells.shp  Utah_FORGE_Regional_wells.shp.xml  Utah_FORGE_Regional_wells.shx
src/forgery/data/well_data/: 16A_survey.csv  16B_survey.csv
test/: conftest.py  test_data.py  test_plots.py  test_vista.py
